<resources>
    <string name="app_name">SMB_Projekt_3 - Firebase</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="shopping_list">Shopping list</string>
</resources>